# egg_report

egg_report/: pyproject.toml  requirements.txt
egg_report/egg_report/: app.py  requirements.txt
egg_report/egg_report/templates/: index.html
egg_report/egg_report/uploads/: parsed_data.xlsx
